--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,3 @@
 [deps]
-ComputationalBiologyCourse = "b466c462-5a1c-40b1-8eaa-0f4a2ec00db7"
+BISC195 = "330f54e6-ee29-40e7-8c38-a258ddbc4e5e"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
